--- a/App.xaml
+++ b/App.xaml
@@ -1,15 +1,16 @@
-﻿<Application x:Class="WindowsOptimizer.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WindowsOptimizer"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+﻿<prism:PrismApplication x:Class="WindowsOptimizer.App"
+                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                        xmlns:local="clr-namespace:WindowsOptimizer"
+                        xmlns:prism="http://prismlibrary.com/"
+                        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
     <Application.Resources>
-        <ResourceDictionary>
+        <ResourceDictionary x:Key="test">
             <ResourceDictionary.MergedDictionaries>
-                <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />
+                <ui:ThemesDictionary Theme="Dark" />
+                <ui:ControlsDictionary />
 
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign2.Defaults.xaml" /> 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
