--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,29 +1,31 @@
-﻿<Window x:Class="WindowsOptimizer.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WindowsOptimizer"
-        mc:Ignorable="d"
-        Style="{StaticResource MaterialDesignWindow}"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="WindowsOptimizer.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:WindowsOptimizer"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:regions="http://prismlibrary.com/"
+    Title="MainWindow" Height="450" Width="800">
     <Grid>
         <!-- 定义两列，左边固定宽度，右边自适应 -->
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/> <!-- 侧边栏宽度 -->
-            <ColumnDefinition Width="*"/>   <!-- 主内容区 -->
+            <ColumnDefinition Width="200" /> <!-- 侧边栏宽度 -->
+            <ColumnDefinition Width="*" />   <!-- 主内容区 -->
         </Grid.ColumnDefinitions>
 
         <!-- 侧边栏 -->
         <StackPanel Grid.Column="0" Background="#FF2D2D30">
-            <Button Content="菜单1" Margin="5"/>
-            <Button Content="菜单2" Margin="5"/>
-            <Button Content="菜单3" Margin="5"/>
+            <ui:Button Content="菜单1" Margin="5" />
+            <ui:Button Content="菜单2" Margin="5" />
+            <ui:Button Content="菜单3" Margin="5" />
         </StackPanel>
 
         <!-- 主内容区 -->
         <Grid Grid.Column="1" Background="White">
-            <TextBlock Text="这里是主内容" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <ContentControl regions:RegionManager.RegionName="ContentRegion" />
+
         </Grid>
     </Grid>
 </Window>
