--- a/App.xaml
+++ b/App.xaml
@@ -1,11 +1,12 @@
-﻿<prism:PrismApplication x:Class="WindowsOptimizer.App"
-                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                        xmlns:local="clr-namespace:WindowsOptimizer"
-                        xmlns:prism="http://prismlibrary.com/"
-                        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
+﻿<prism:PrismApplication
+    x:Class="WindowsOptimizer.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:WindowsOptimizer"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
     <Application.Resources>
-        <ResourceDictionary x:Key="test">
+        <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemesDictionary Theme="Dark" />
                 <ui:ControlsDictionary />
