--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,31 +1,64 @@
-﻿<Window
+﻿<ui:FluentWindow
     x:Class="WindowsOptimizer.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:WindowsOptimizer"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:regions="http://prismlibrary.com/"
-    Title="MainWindow" Height="450" Width="800">
+    Title="MainWindow" Height="500" Width="700"
+    WindowStartupLocation="CenterScreen">
     <Grid>
-        <!-- 定义两列，左边固定宽度，右边自适应 -->
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200" /> <!-- 侧边栏宽度 -->
-            <ColumnDefinition Width="*" />   <!-- 主内容区 -->
-        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <!-- 顶部标题栏 -->
+        <ui:TitleBar
+            Title="Windows Optimizer"
+            Grid.Row="0"
+            ShowMaximize="True"
+            ShowMinimize="True"
+            ShowClose="True" />
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="240" /> <!-- 侧边导航栏 -->
+                <ColumnDefinition Width="*" />   <!-- 内容区域 -->
+            </Grid.ColumnDefinitions>
 
-        <!-- 侧边栏 -->
-        <StackPanel Grid.Column="0" Background="#FF2D2D30">
-            <ui:Button Content="菜单1" Margin="5" />
-            <ui:Button Content="菜单2" Margin="5" />
-            <ui:Button Content="菜单3" Margin="5" />
-        </StackPanel>
+            <!-- 左侧导航栏 -->
+            <ui:NavigationView
+                Grid.Column="0"
+                Margin="0"
+                PaneDisplayMode="Left"
+                OpenPaneLength="240">
+                <ui:NavigationView.MenuItems>
+                    <ui:NavigationViewItem
+                        Content="系统优化"
+                        Icon="Computer"
+                        Tag="SystemPage" />
+                    <ui:NavigationViewItem
+                        Content="启动项管理"
+                        Icon="PlayCircle"
+                        Tag="StartupPage" />
+                    <ui:NavigationViewItem
+                        Content="磁盘清理"
+                        Icon="Database"
+                        Tag="CleanupPage" />
+                </ui:NavigationView.MenuItems>
+            </ui:NavigationView>
 
-        <!-- 主内容区 -->
-        <Grid Grid.Column="1" Background="White">
-            <ContentControl regions:RegionManager.RegionName="ContentRegion" />
-
+            <!-- 内容区 -->
+            <ui:Card
+                Grid.Column="1"
+                Margin="16"
+                Padding="16"
+                Background="{DynamicResource UiBrushBackground}"
+                BorderBrush="{DynamicResource UiBrushControlStroke}"
+                BorderThickness="1">
+                <ContentControl
+                    regions:RegionManager.RegionName="ContentRegion"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch" />
+            </ui:Card>
         </Grid>
     </Grid>
-</Window>
+</ui:FluentWindow>
