--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<ui:FluentWindow
-    x:Class="WindowsOptimizer.MainWindow"
+    x:Class="WindowsControlPanel.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
