--- a/Views/DashboardPage.xaml
+++ b/Views/DashboardPage.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WindowsOptimizer.Views.DashboardPage"
+﻿<UserControl x:Class="WindowsControlPanel.Views.DashboardPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WindowsOptimizer.Views"
+             xmlns:local="clr-namespace:WindowsControlPanel.Views"
              xmlns:mvvm="http://prismlibrary.com/"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              mvvm:ViewModelLocator.AutoWireViewModel="True"
