--- a/Views/OptimizeOptionPage.xaml
+++ b/Views/OptimizeOptionPage.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WindowsOptimizer.Views.OptimizeOptionPage"
+﻿<Window x:Class="WindowsControlPanel.Views.OptimizeOptionPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
